--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
     "@urql/core": "^5.1.0",
+    "@urql/exchange-auth": "^2.2.0",
     "@urql/next": "^1.1.3",
     "graphql": "^16.6.0",
     "js-cookie": "^3.0.5",
-    "next": "13.4.2",
+    "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "urql": "^4.2.1"
